<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
        <TextView
        android:id="@+id/advancedTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/advanced_textview" />
    
        <CheckBox
        android:id="@+id/tapConfig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/tapConfig" />
        
        <CheckBox
        android:id="@+id/memoryGB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/memoryGB" />
        
        <CheckBox
        android:id="@+id/ramGB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/ramGB" />
        
        
        <CheckBox
        android:id="@+id/hourFormat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/hourFormat" />

        <CheckBox
            android:id="@+id/shortDays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/shortDays" />
        
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <RadioButton
        android:id="@+id/textLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/textLeft" />
        
        <RadioButton
        android:id="@+id/textCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/textCenter" />
        
        <RadioButton
        android:id="@+id/textRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/textRight" />
        
        </RadioGroup>
        
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <RadioButton
        android:id="@+id/oneSec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/oneSec" />
        
        <RadioButton
        android:id="@+id/threeSec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/threeSec" />
        
        <RadioButton
        android:id="@+id/fiveSec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/fiveSec" />
        
        </RadioGroup>
        
        
        
        <CheckBox
        android:id="@+id/multiCPU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/multiCPU" />
        
        <CheckBox
        android:id="@+id/noCPUTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/noCPUTitle" />
        
        <CheckBox
        android:id="@+id/kilobyteSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/kilobyteSpeed" />
        
        <CheckBox
        android:id="@+id/degreesF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/degreesF" />
        
        
        <TextView
        android:id="@+id/externalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/externalText" />
        
        <EditText
        android:id="@+id/externalPath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/externalPath" />
        
        <Button
           android:id="@+id/saveConfig"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/saveConfig" 
           android:onClick="saveConfig"/>
        
        
            
        </LinearLayout>
    </ScrollView>
